# News-Room-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  news_history.json  pyproject.toml
cogs/: News-Room.py
src/news_room_bot/: __main__.py
src/news_room_bot/cogs/: __init__.py  news_room.py
